[package]
name = "rsget"
version = "2.1.1-alpha.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
anyhow = "1.0.52"
clap = { version = "4.5.20", features = ["derive"] }
indicatif = "0.17.8"
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["macros", "fs", "io-util", "rt-multi-thread"] }

